Fixed the button sizes and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -184,6 +184,11 @@ input {
   height: 50px;
 }
 
+.small_img_btn {
+  width: 30px;
+  height: 30px;
+}
+
 .btn_img {
   width: 100%;
 }
